--- a/Coluna-Sem-Dor/scr/style/style.css
+++ b/Coluna-Sem-Dor/scr/style/style.css
@@ -7,18 +7,25 @@
     text-decoration: none;
 }
 
+:root{
+    --bg-color-violet: #c2bea6;
+    --bg-button-violet: #4a8d78;
+    --text-color: #4e4e3d;
+
+}
+
 header{
-    background-color: antiquewhite;
+    background-color: var(--bg-color-violet);
     display: flex;
-    margin: 0% 0% 10% 10%;
-    width: 80%;
-    border: 1px solid black;
+    width: 100%;
+    height: 120px;
     justify-content: space-between;
     align-items: center;
 }
 
 header>img{
     margin-left: 30px;
+    height: 90px;
 }
 
 nav{
@@ -29,9 +36,12 @@ nav{
 nav>a{
     display: flex;
     justify-content: space-between;
-    color: violet;
+    color: var(--text-color);
 }
 
 .agende-header{
     margin-right: 30px;
+    background-color: var(--bg-button-violet);
+    border: 1px solid violet;
+    padding: 15px;
 }
