--- a/css/nav.css
+++ b/css/nav.css
@@ -1,41 +1,34 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-nav {
+header{
+    background-color: var(--main);
     display: flex;
-    justify-content: space-around;
-    font-family: 'Poppins', sans-serif;
-    margin-top: 20px;
+    width: 100%;
+    height: 120px;
+    justify-content: space-between;
     align-items: center;
-    color: #202020;
 }
 
-.logo {
-    font-weight: 800;
-    font-size: 25px;
+header>img{
+    margin-left: 30px;
+    height: 350px;
 }
 
-.nav-itens {
-    list-style: none;
+nav{
     display: flex;
+    gap: 20px;
 }
 
-.nav-itens>li>a {
-    padding-left: 20px;
-    color: #202020;
-    text-decoration: none;
+nav>a{
+    display: flex;
+    justify-content: space-between;
+    color: var(--text-color);
 }
 
-.agende {
-    padding: 10px 40px;
-    font-size: 15px;
-    border: none;
-    border-radius: 5px;
-    color: #ffffff;
-    background-color: #000000;
-    font-family: 'Poppins', sans-serif;
-    cursor: pointer;
+.agende-header{
+    margin-right: 30px;
+    background-color: var(--softbrown);
+    padding: 15px;
+}
+
+.agende-header a{
+    color: black;
 }
