--- a/css/main.css
+++ b/css/main.css
@@ -4,4 +4,23 @@ main .hero{
     background-repeat: no-repeat;
     width: 100%;
     height: 80vh;
+    justify-content: left;
+    display: flex;
+}
+
+.textos-main{
+    display: grid;
+    align-content: space-between;
+    justify-content: left;
+    height: 80vh;
+    align-items: center;
+    padding: 10vh 10vh 10vh 10vh
+}
+.textos-main>p{
+    background-color: var(--softbrown);
+}
+.button{
+    background-color: var(--main);
+    align-self: center;
+    justify-self: center;
 }
