--- a/css/nossos-servicos.css
+++ b/css/nossos-servicos.css
@@ -2,12 +2,24 @@
     display: flex;
     width: 100%;
     height: 80vh;
+    justify-content: space-between;
     background-color: #D5CFBD7F;
 }
 .aside-text-ns{
     display: flex;
+    margin-left: 7%;
     justify-self: left;
     justify-content: left;
+    align-items: center;
+    background-color: #D5CFBD7F;
+    width: 500px;
+    height: 600px;
+}
+.aside-img-ns{
+    display: flex;
+    margin-right: 7%;
+    justify-self: right;
+    justify-content: center;
     align-items: center;
     background-color: #D5CFBD7F;
     width: 500px;
