--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,13 +1,26 @@
-:root{
+/* Reset básico e variáveis globais */
+
+:root {
     --green: #6EB7A9;
-    --doricWihte: #D5CFBD;
+    --doricWhite: #D5CFBD;
     --sand: #ADA694;
     --white: #eee;
-}
-
-*{
+    --text-dark: #222;
+    --text-light: #fff;
+    --highlight: #008060;
+  }
+  
+  * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
+  }
+  
+  body {
     font-family: 'Poppins', sans-serif;
-}
+    background-color: var(--white);
+    color: var(--text-dark);
+
+  }
+  
