--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
-:root{
-    --main: #6EB7A9;
-    --softbrown: #D5CFBD;
-    --text-color: #FFFFFF;
-    --brown: #ADA694;
+*{
+   /* font-family: "Cinzel Decorative", sans-serif; */
+    background: none;
+    padding: 0;
+    margin: 0;
+    border: none;
+    box-sizing: border-box;
 }
