--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,45 +1,44 @@
-.contato {
-    background-color: var(--white);
-    padding: 4rem 2rem;
-  }
-
-  .contato h2 {
-    color: var(--green);
-    margin-bottom: 2rem;
-    text-align: center;
-  }
-
-  .hero {
-    background-image: url('../assets/bg-main-1.JPG');
-  }
-  
-  .contato-wrapper {
-    display: flex;
-    justify-content: space-between;
-    gap: 2rem;
-    flex-wrap: wrap;
-    max-width: 1100px;
-    margin: auto;
-  }
-  
-  .contato .info {
-    flex: 1;
-    min-width: 280px;
-  }
-  
-  .contato .mapa {
-    flex: 1;
-    min-width: 280px;
-  }
-  
-  .contato .mapa img {
-    max-width: 100%;
-    border-radius: 8px;
-  }
-  
-  .contato .social-icons {
-    display: flex;
-    gap: 1rem;
-    margin-top: 0.5rem;
-  }
-  
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+.hero {
+  background-image: url('../assets/bg-main-1.JPG');
+  /* filter: brightness(50%); */
+  width: 100%;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  justify-content: baseline;
+  align-content: center;
+}
+.hero-div{
+  display: grid;
+  margin-left: 170px;
+  height: 255px;
+  width: 1000px;
+  align-content: space-between;
+}
+.hero-div h1{
+  width: 785px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 45px;
+  text-shadow: 1px 1px 0 black, 1px 1px 0 black;
+  color: white;
+}
+.hero-div p{
+  font-family: 'Poppins', sans-serif;
+  font-size: 30px;
+  color: white;
+  text-shadow: 1px 1px 0 black, 1px 1px 0 black;
+}
+.hero-button{
+  margin-top: 30px;
+  border-radius: 15px;
+  height: 90px;
+  width: 340px;
+  /* box-shadow: 1px 1px 0 black, 1px 1px 0 black; */
+  background-color: var(--green);
+}
+.cta{
+  margin: 30px;
+  font-size: 30px;
+  color: white;
+}
