Subindo o cod finalizado do dia</article>(sabado)

--- a/src/styles/sobreNos.css
+++ b/src/styles/sobreNos.css
@@ -1,6 +1,4 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 .sobre{
     display: flex;
     align-items: center;
@@ -9,18 +7,18 @@
 
 .sobre img{
     height: 500px;
-    margin-right: 50px;
+    margin-right: px;
 }
 
 
 .sobre h2{
     color: #6EB7A9;
-    padding: 0px;
-    margin: 50px;
+    padding: px;
+    margin: 170px;
 }
 
 
 .sobre p{
-    margin: 50px;
-    font-size: ;
+    margin: 0;
+    font-size: 15px;
 }
