--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,7 +3,7 @@
   background-image: url('../assets/bg-main-1.JPG');
   /* filter: brightness(50%); */
   width: 100%;
-  height: 100vh;
+  height: 700px;
   background-repeat: no-repeat;
   background-size: cover;
   justify-content: baseline;
