--- a/src/styles/tratamentos.css
+++ b/src/styles/tratamentos.css
@@ -1,3 +1,63 @@
 .tratamentos{
+    display: flex;
     background-color: #d9d9d9;
+    width: 100%;
+    height: 700px;
+    justify-content: space-between;
+    align-items: center;
+}
+.tratamentos-button{
+    margin-top: 30px;
+    border-radius: 15px;
+    height: 60px;
+    width: 340px;
+    /* box-shadow: 1px 1px 0 black, 1px 1px 0 black; */
+    background-color: var(--green);
+}
+.tratamentos-aside-textos{
+    display: grid;
+    margin-left: 170px;
+    height: 605px;
+    align-content: space-around;
+}
+.tratamentos-aside-textos h2{
+    width: 705px;
+    font-size: 45px;
+    color: var(--green);
+}
+.tratamentos-aside-textos p{
+    width: 705px;
+    font-size: 25px;
+    color: black;
+    text-justify: auto;
+}
+.tratamentos-list{
+    font-size: 20px;
+    color: black;
+    list-style: none;
+}
+.tratamentos-aside-fotos{
+    display: flex;
+    justify-content: space-between;
+    margin-right: 220px;
+}
+.tratamentos-aside-fotos img{
+    height: 230px;
+    border-radius: 100px;
+}
+.tratamentos-foto-1{
+    align-content: space-around;
+    height: 640px;
+    display: grid;
+}
+.tratamentos-foto-2{
+    align-content: center;
+    margin-left: 40px;
+    height: 640px;
+    display: grid;
+}
+.ctb{
+    margin: 30px;
+    font-size: 20px;
+    color: white;
 }
