--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,46 @@
+
+
+/* AIDA Interesse */
+.hero {
+  position: relative;
+  height: 500px; /* ou o tamanho que quiser */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--text-light);
+  text-align: center;
+  overflow: hidden;
+}
+
+.hero::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-image: url('../img/hero.jpg');
+  background-size: cover;
+  background-position: center;
+  filter: brightness(0.5); /* ou blur(2px), grayscale(1) etc */
+  z-index: 0;
+}
+
+.hero .container {
+  position: relative;
+  z-index: 1;
+}
+
+/* Dra Alessandra */
+
+/* Sobre Nos */
+
+/* Nossa Estrutura */
+
+
+
+
+
+
+
+/* Contato  */
 .contato {
     background-color: var(--white);
     padding: 4rem 2rem;
@@ -9,16 +52,17 @@
     text-align: center;
   }
 
-  .hero {
-    background-image: url('../assets/bg-main-1.JPG');
-  }
+
+  
+
+
   
   .contato-wrapper {
     display: flex;
     justify-content: space-between;
     gap: 2rem;
     flex-wrap: wrap;
-    max-width: 1100px;
+    max-width: 1200px;
     margin: auto;
   }
   
