--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -67,13 +67,80 @@ header nav a {
 
 .hero-aside h1 {
     width: 80%;
+    font-weight: bold;
     font-size: 40px;
     text-justify: auto;
+    text-shadow: 1px 1px 1px black, 1px 1px 1px black;
     color: var(--text-light);
 }
 
 .hero-aside p {
-    font-size: 30px;   
+    font-size: 30px;
+    text-shadow: 1px 1px 1px black, 1px 1px 1px black;   
     color: var(--text-light);
 }
 
+.hero-aside a {
+    display: flex;
+    width: 30%;
+    height: 90px;
+    justify-content: center;
+    align-items: center;
+    /* font-weight: bold; */
+    font-size: 30px;
+    color: var(--text-light);
+    text-shadow: 1px 1px 1px black, 1px 1px 1px black;
+    background-color: var(--green);
+    border-radius: 10px;
+}
+
+.tratamentos {
+    display: flex;
+    width: 100%;
+    height: 800px;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+}
+
+.tratamentos-aside {
+    display: grid;
+    margin-left: 7%;
+    width: 80%;
+    align-items: center;
+    justify-content: left;
+    gap: 5%;
+}
+
+.tratamentos-aside h1 {
+    font-size: 45px;
+    font-weight: bold;
+    color: var(--green);
+}
+
+.tratamentos-aside h2 {
+    font-size: 25px;
+    color: var(--text-dark);
+    font-weight: normal;
+}
+
+.tratamentos-li {
+    font-size: 20px;
+}
+
+.tratamentos-span {
+    font-weight: bold;
+}
+
+.tratamentos-aside a {
+    display: flex;
+    width: 40%;
+    height: 60px;
+    font-size: 20px;
+    color: var(--text-light);
+    background-color: var(--green);
+    text-shadow: 1px 1px 1px  black, 1px 1px 1px black;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+}
