--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -127,6 +127,7 @@ header nav a {
 
 .tratamentos-li {
   font-size: 20px;
+  list-style: none;
 }
 
 .tratamentos-span {
@@ -180,17 +181,24 @@ header nav a {
 
 .dra-alessandra {
   display: flex;
-  height: 800px;
-  justify-content: center;
+  height: 1200px;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10%;
   width: 100%;
 }
 .dra-alessandra-image {
   margin-left: 7%;
+  object-fit: fill;
+  width: 40%;
+  height: 80%;
+  max-height: 700px;
 }
  .dra-alessandra-aside {
   display: grid;
-  margin-right: 7%;
   width: 90%;
+  height: 850px;
+  margin-right: 7%;
  }
 
 .dra-alessandra h1 {
@@ -203,22 +211,28 @@ header nav a {
   color: var(--text-dark);
 }
 .list {
-  gap: 10px;
-  list-style: none;
+  list-style-image: url(../images/workspace_premium.png);
+  list-style-position: inside;
+  text-align: justify;
 }
 
 .list-item {
   width: 100%;
-
+  height: 55px;
+  margin: 1%;
+  line-height: 25px;
+  padding: 7px;
+  font-size: 25px;
   background-color: var(--doricWhite);
-
+  text-size-adjust: auto;
 }
 
 .list-img {
-
+  width: 38px;
+  height: auto;
 }
 
-/* Responsividade para tablets (até 1024px) */
+/* Responsividade para tablets (até 1024px) 
 @media (max-width: 1024px) {
   header {
     flex-direction: column;
@@ -297,7 +311,7 @@ header nav a {
   }
 }
 
-/* Responsividade para celulares (até 768px) */
+ Responsividade para celulares (até 768px) 
 @media (max-width: 768px) {
   header nav a {
     font-size: 16px;
