--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -211,12 +211,12 @@ header nav a {
   color: var(--text-dark);
 }
 .list {
-  list-style-image: url(../images/workspace_premium.png);
+  list-style-image: url(../images/workspace_premium.svg);
   list-style-position: inside;
-  text-align: justify;
 }
 
 .list-item {
+  display: flexbox;
   width: 100%;
   height: 55px;
   margin: 1%;
@@ -225,12 +225,10 @@ header nav a {
   font-size: 25px;
   background-color: var(--doricWhite);
   text-size-adjust: auto;
+  text-align: left;
 }
 
-.list-img {
-  width: 38px;
-  height: auto;
-}
+
 
 /* Responsividade para tablets (até 1024px) 
 @media (max-width: 1024px) {
