--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -187,6 +187,7 @@ header nav a {
   gap: 10%;
   width: 100%;
 }
+
 .dra-alessandra-image {
   margin-left: 7%;
   object-fit: fill;
@@ -194,42 +195,109 @@ header nav a {
   height: 80%;
   max-height: 700px;
 }
- .dra-alessandra-aside {
+
+.dra-alessandra-aside {
   display: grid;
   width: 90%;
   height: 850px;
   margin-right: 7%;
- }
+}
 
 .dra-alessandra h1 {
   font-size: 60px;
   color: var(--green);
   font-weight: bold;
 }
-.dra-alessandra h2{
+
+.dra-alessandra h2 {
   font-size: 30px;
   color: var(--text-dark);
 }
+
 .list {
   list-style-image: url(../images/workspace_premium.svg);
   list-style-position: inside;
+  list-style: none;
 }
 
 .list-item {
-  display: flexbox;
+  display: flex;
   width: 100%;
   height: 55px;
   margin: 1%;
-  line-height: 25px;
-  padding: 7px;
+  padding: 1%;
+  align-items: center;
+  color: var(--text-dark);
   font-size: 25px;
   background-color: var(--doricWhite);
   text-size-adjust: auto;
   text-align: left;
 }
 
+.list-image {
+  width: 50px;
+  height: 90%;
+  background-image: url(../images/workspace_premium.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+}
 
+.depoimentos {
+  display: grid;
+  justify-content: center;
+}
 
+.depoimentos h1 {
+  font-size: 60px;
+  /* font-weight: bold; */
+  color: var(--green);
+}
+
+.depoimentos a {
+  display: flex;
+  justify-self: center;
+  width: 30%;
+  height: 90px;
+  justify-content: center;
+  align-items: center;
+  /* font-weight: bold; */
+  font-size: 30px;
+  color: var(--text-light);
+  text-shadow: 1px 1px 1px #00000033, 1px 1px 1px #00000033;
+  background-color: var(--green);
+  border-radius: 10px;
+}
+
+.contato {
+  display: flex;
+  width: 100%;
+  height: 600px;
+  justify-content: space-between;
+  align-items: center;
+}
+.contato-aside {
+  width: 90%;
+  height: auto;
+  margin-left: 7%;
+}
+
+.contato-aside h1 {
+  font-size: 60px;
+  color: var(--green);
+  font-weight: normal;
+}
+
+.contato-text{
+  display: flex;
+  font-size: 25px;
+  margin: 3%;
+}
+.contato-button{
+  margin-left: 2%;
+}
+iframe {
+  margin-right: 7%;
+}
 /* Responsividade para tablets (até 1024px) 
 @media (max-width: 1024px) {
   header {
