--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -268,7 +268,7 @@ header nav a {
   border-radius: 10px;
 }
 
-.contato {
+/* .contato {
   display: flex;
   width: 100%;
   height: 600px;
@@ -297,7 +297,7 @@ header nav a {
 }
 iframe {
   margin-right: 7%;
-}
+} */
 /* Responsividade para tablets (até 1024px) 
 @media (max-width: 1024px) {
   header {
