--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -9,7 +9,7 @@ header {
 
 header img {
   margin-left: 7%;
-  width: 25%;
+  width: 20%;
 }
 
 header nav {
@@ -29,20 +29,20 @@ header nav a {
 .div-navbar-buttons {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   width: 25%;
   height: 140px;
   margin-right: 7%;
 }
 
 .navbar-buttons {
-  width: 30%;
+  width: 15%;
   height: 90%;
 }
 
 .navbar-icons {
   height: 90%;
-  width: 30%;
+  width: 60%;
 }
 
 .hero {
@@ -268,6 +268,59 @@ header nav a {
   border-radius: 10px;
 }
 
+footer {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  background-color: var(--green);
+  color: var(--text-dark);
+  padding: 2rem 1rem;
+}
+
+.footer-wrapper {
+  /* max-width: 1100px; */
+  width: 100%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.footer-logo {
+  height: 60px;
+}
+
+footer p {
+  font-size: 0.9rem;
+  margin: 0;
+  flex: 1;
+  text-align: center;
+}
+
+.whatsapp-icon {
+  width: 40px;
+  height: 40px;
+}
+
+.footer-image {
+  display: flex;
+  width: 25%;
+  justify-content: center;
+}
+
+.footer-text {
+  display: flex;
+  width: 40%;
+  justify-content: center;
+}
+
+.footer-whatsapp {
+  display: flex;
+  width: 25%;
+  justify-content: center;
+}
 /* .contato {
   display: flex;
   width: 100%;
