fix: contato link

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -242,6 +242,34 @@ header nav a {
   background-repeat: no-repeat;
 }
 
+.sobre-nos {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  
+  margin: 0 100px 5px 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  
+  }
+  
+  .texts {
+  width: 100%;
+  max-width: 500px;
+  }
+  .texts h2 {
+  font-size: 3em;
+  margin-bottom: 24px;
+  }
+  
+  .fachada {
+  width: 100%;
+  max-width: 500px;
+  display: flex;
+  flex-direction: column;
+  }
+  
 .depoimentos {
   display: grid;
   justify-content: center;
