--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -320,6 +320,40 @@ footer p {
   display: flex;
   width: 25%;
   justify-content: center;
+  }
+
+  .contato{
+    margin: 7%;
+    display: flex;
+    align-items: center;
+    gap: 100px;
+}
+
+.contato h1{
+    color: #6EB7A9;
+    font-size: 30px;
+}
+
+.contato-text {
+  display: flex;
+  align-items: flex-start; 
+  gap: 10px; 
+  margin-bottom: 20px; 
+}
+
+.contato-text img {
+  width: 24px; 
+  height: auto;
+}
+
+.contato-buttons{
+  margin: 7%;
+}
+
+.contato-buttons img{
+  width: 30px;
+}
+
 }
 /* .contato {
   display: flex;
