--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -45,14 +45,22 @@ header nav a {
 }
 
 .hero {
-  display: flex;
+  /* display: flex; */
   width: 100%;
   height: 800px;
-  justify-content: left;
-  align-items: center;
+  /* justify-content: left;
+  align-items: center; */
   background-image: url(../images/bg-main-1.JPG);
   background-repeat: no-repeat;
   background-size: cover;
+}
+.opacity{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: #00000066;
+  justify-content: left;
+  align-items: center;
 }
 
 .hero-aside {
